--- a/index.html
+++ b/index.html
@@ -519,7 +519,7 @@
                 id="username"
                 autofocus
               />
-              <svg class="icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="18">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
               <div class="line"></div>
@@ -535,7 +535,7 @@
                 name="contact_tel"
                 id="contact_tel"
               />
-              <svg class="icon" width="18" height="24">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
               <div class="line"></div>
@@ -546,7 +546,7 @@
             <label class="form-label" for="email">Email</label>
             <div class="input-box">
               <input class="form-input" type="email" name="email" id="email" />
-              <svg class="icon" width="18" height="24">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
               <div class="line"></div>
